--- a/public/admin.html
+++ b/public/admin.html
@@ -2666,8 +2666,7 @@ async function exportUsers() {
                 { id: 'shop', label: '🛒 Магазин', checked: true },
                 { id: 'invite', label: '👥 Приглашения', checked: true },
                 { id: 'interactives', label: '🎮 Интерактивы', checked: true },
-                { id: 'change_role', label: '🔄 Смена роли', checked: true },
-                { id: 'private_videos', label: '🎬 Приватные материалы', checked: true 
+                { id: 'change_role', label: '🔄 Смена роли', checked: true }
             ];
             
             buttonsGrid.innerHTML = '';
